2012-05-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.1

2012-05-13  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/sampler.h: Use explicit std::max() for g++-4.7

2012-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.0

	* src/rng.cpp: Moved old GSL-based RNG code to deprecated/
	* inst/include/rng.h: Idem
	* man/pfLineartBS.Rd: Callback-to-R example only if interactive()

2012-03-21  Adam Johansen <a.m.johansen@warwick.ac.uk>

	* R/pfLineartBS.R Added function to dynamically set the range of
	the online plot.

2012-03-19  Adam Johansen <a.m.johansen@warwick.ac.uk>

	* R/simGaussian.R Added data-simulating function
	* R/simLineart.R Idem
	* R/simNonlin.R Idem
	* man/blockpfGaussianOpt.Rd Added simulator doc and example usage.
	* man/pfLineartBS.Rd Idem
	* man/pfNonlinBS.Rd Idem
	* NAMESPACE Added data-simulating functions to namespace

2012-03-18  Dirk Eddelbuettel  <edd@debian.org>

	* R/pfLineartBS.R: Adjust naming of the two helper functions
	* man/pfLineartBS.Rd: Idem

2012-03-18  Adam Johansen <a.m.johansen@warwick.ac.uk>

	* src/pfEx.cpp renamed to pflineartbs.cpp
	* inst/include/pffuncs.h renamed to pflineartbs.h
	* R/pfEx.R renamed to pfLineartBS.R
	* man/pfEx.Rd renamed to pfLineartBS.Rd

	* R/bspfGaussianOptimal.R tweaked & standardised plotting.
	* R/pfNonlinBS.R fixed plotting bug.

	* deprecated/ moved all rareEvents files here.

2012-03-17  Adam Johansen <a.m.johansen@warwick.ac.uk>

	* man/pfEx.Rd updated to reflect previous changes.

	* NAMESPACE removed rareEvents
	* src/rareEvents.cpp moved to src/rareEvents.
	* src/simfunctions.cpp idem.
	* inst/include/simfunctions.h moved to inst/include/rareEvents.
	* inst/include/markovchains idem
	* man/rareEventsEx.Rd moved to man/rareEvents.
	* R/rareEventsEx.R moved to R/rareEvents.

2012-03-16  Dirk Eddelbuettel  <edd@dexter>

	* src/pf.cpp:
	  - Changed to get example data from R and pass to vector of cv_obs